--- a/style.css
+++ b/style.css
@@ -41,6 +41,44 @@ h2{
     border-radius: 5px;
     margin: 3em auto;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+label{
+    text-align: center;
+    color: rgb(255,118,118);
+    margin-bottom: 25px;
+    font-weight: bold;
+}
+
+input{
+    padding: 20px;
+    border-color: rgb(255,118,118);
+    border-radius: 5px;
+    outline: none;
+}
+
+input:focus{
+    outline: none;
+}
+
+button{
+    border-radius: 5px;
+    border: none;
+    margin: 25px;
+    padding: 10px;
+    background-color: rgb(255,118,118);
+    color: white;
 }
 
 .footer{
