--- a/style.css
+++ b/style.css
@@ -26,14 +26,6 @@ h1{
     text-align: center;
 }
 
-h2{
-    text-align: center;
-    color: white;
-    font-weight: 200;
-    font-size: 1.1em;
-    font-style: italic;
-}
-
 .container{
     width: 75vw;
     height: 75vh;
@@ -48,6 +40,13 @@ h2{
 }
 
 form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.jeu{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -79,6 +78,18 @@ button{
     padding: 10px;
     background-color: rgb(255,118,118);
     color: white;
+}
+
+.findejeu{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: brown;
+}
+
+.cache{
+    display: none;
 }
 
 .footer{
