--- a/style.css
+++ b/style.css
@@ -78,6 +78,15 @@ button{
     padding: 10px;
     background-color: rgb(255,118,118);
     color: white;
+    box-shadow: 2px 2px 0px 2px #D56363;
+    -moz-box-shadow: 2px 2px 0px 2px #D56363;
+    -webkit-box-shadow: 2px 2px 0px 2px #D56363;
+}
+
+button:hover{
+    box-shadow: inset 0.5px 0.5px 0px 0.5px #D56363;
+    -moz-box-shadow: inset 0.5px 0.5px 0px 0.5px #D56363;
+    -webkit-box-shadow: inset 0.5px 0.5px 0px 0.5px #D56363;
 }
 
 .findejeu{
