--- a/style.css
+++ b/style.css
@@ -34,12 +34,11 @@ h1{
     margin: 3em auto;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 
 form{
+    width: 33%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -47,34 +46,54 @@ form{
 }
 
 .jeu{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center; 
+    justify-content: center;
+}
+
+img{
+    width: 33%;
+    height: 100%;
+    
+}
+
+.informations{
+    width: 33%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
+#result{
+    font-size: 3em;
+    font-weight: 900;
+    color: rgb(255,118,118);
+}
+
+
 label{
     text-align: center;
     color: rgb(255,118,118);
-    margin-bottom: 25px;
+    margin-bottom: 10px;
     font-weight: bold;
 }
 
 input{
     padding: 20px;
+    margin: 0;
     border-color: rgb(255,118,118);
     border-radius: 5px;
-    outline: none;
-}
-
-input:focus{
     outline: none;
 }
 
 button{
     border-radius: 5px;
     border: none;
-    margin: 25px;
+    margin: 0;
     padding: 10px;
     background-color: rgb(255,118,118);
     color: white;
